[package]
name = "cluEscSequency"
version = "0.2.3"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/ColorGeneric.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = ""
keywords = ["ansi_esc_sequence", "esc_sequence", "cluEscSequency", "clucompany"]
categories = ["development-tools"]

[dependencies]
cluExtIO = { path = "/d/cluOS/new/RELEASE/cluExtIO" }
cluConcatBytes = { path = "/d/cluOS/new/RELEASE/cluConcatBytes" }
cluConstConcat = { path = "/d/cluOS/new/RELEASE/cluConstConcat" }