[package]
name = "cluEscSequences"
version = "0.2.6"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluEscSequences.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = ""
keywords = ["ansi_esc_sequence", "esc_sequence", "cluEscSequences", "clucompany"]
categories = ["development-tools"]

[dependencies]
macro_tt_utils = "0.1.9"
cluExtIO = { git = "https://github.com/clucompany/cluExtIO" }
cluConstData = "1.3.0"
